PLANET-6141 Fix images alignment in posts
It was no longer possible to align small images in posts to the left, right or center

--- a/assets/src/scss/pages/post/_article-content.scss
+++ b/assets/src/scss/pages/post/_article-content.scss
@@ -128,11 +128,6 @@
   .aligncenter {
     margin-left: auto;
     margin-right: auto;
-    display: block;
-
-    figcaption {
-      display: block;
-    }
   }
 
   cite {
